:hammer: fix z-index for hero section bottom inputs

--- a/src/scss/layout/hero-section.scss
+++ b/src/scss/layout/hero-section.scss
@@ -39,6 +39,7 @@ header {
   justify-content: space-between;
   align-items: center;
   position: relative;
+  z-index: 10;
 }
 
 .bottom-right {
